--- a/samples/0/index.html
+++ b/samples/0/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root" class="wrapper"></div>
-    <script src="dist/main.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
